--- a/views/index.html
+++ b/views/index.html
@@ -30,7 +30,7 @@
                             <ul class="list-group">
                                 <li class="list-group-item"
                                     ng-repeat="message in messages">
-                                    {{ message.name }} says: {{ message.msg }}
+                                    {{ message.name === username ? 'You' : message.name }}: {{ message.msg }}
                                 </li>
                             </ul>
                             <div class="alert alert-warning" ng-show='messages.length == 0'>
@@ -46,7 +46,7 @@
                     </div>
 
                     <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
-                        <h3>USERS ONLINE</h3><hr />
+                        <h3>USERS ONLINE: {{userList.count}}</h3><hr />
                         <div class="list-group">
                             <div class="list-group-item"
                                  ng-repeat="user in userList"
@@ -55,7 +55,7 @@
                                  ng-style="{
                             'cursor': user.id === socketId ? 'not-allowed' :'pointer'
                         }">
-                                <span id='{{user.id}}'>{{ user.id === socketId ? 'You': user.userName}}</span>
+                                <span id='{{user.id}}'>{{ user.id === socketId ? 'You': user.userName }}</span>
                             </div>
                         </div>
                     </div>
