--- a/views/index.html
+++ b/views/index.html
@@ -24,7 +24,7 @@
 
                     <div class="col-12 col-md-9">
                         <div class="jumbotron">
-                            <h1>Hello, {{username}}!</h1>
+                            <h1>Hello, {{username}}!</h1><button type="button" class="btn-primary" ng-click="logout(username)">Logout</button>
                             <p>Visibility: <span class="badge badge-default">{{status}}</span></p>
                             <hr />
                             <ul class="list-group">
@@ -35,34 +35,66 @@
                             </ul>
                             <div class="alert alert-warning" ng-show='messages.length == 0'>
                                 No messages for you.
-                            </div> 
+                            </div>
                             <hr />
                             <div ng-show="writeMessage">
                                 <div class="message-sender">
                                     <textarea class="form-control" ng-model='message' ng-keypress="sendMsg($event)"></textarea>
                                 </div>
-                            </div> 
+                            </div>
                         </div>
                     </div>
 
                     <div class="col-6 col-md-3 sidebar-offcanvas" id="sidebar">
-                        <h3>USERS ONLINE: {{userList.count}}</h3><hr />
+                        <div class="card">
+                            <div class="card-header">
+                                USERS ONLINE: {{userListCount}}
+                            </div>
+                            <div class="card-block">
+                                <h4 class="card-title">How to chat?</h4>
+                                <p class="card-text">Enter the username in the search box or select from a list of users who have made their precese visible</p>
+                                <div class="form-group">
+                                    <input type="text" class="form-control" ng-model="searchUsername" placeholder="Enter username">
+                                </div>
+                                <button type="button" ng-click="search()" class="btn btn-primary">Initiate chat</button>
+                                <hr />
+                                <h4 class="card-title">Visible Users</h4>
+                                <div ng-repeat="user in userList">
+                                    <div ng-show="user.online">
+                                        <div class="alert alert-success" role="alert">
+                                            {{user.userName}}
+                                        </div>
+                                    </div>
+                                    <div ng-hide="user.online">
+                                        <div class="alert alert-warning" role="alert">
+                                            {{user.userName}} - offline
+                                        </div>
+                                    </div> 
+                                </div>
+                                <!--<div class="list-group-item"
+                                     ng-repeat="user in userList"
+                                     ng-class="{ 'active' : user.id == selectedUser}"
+                                     ng-click=seletedUser(user.id);
+                                     ng-style="{'cursor': user.id === socketId ? 'not-allowed' :'pointer'}">
+
+                                </div>-->
+                            </div>
+                        </div>
+                        <!--<h3>USERS ONLINE: {{userListCount}}</h3><hr />
                         <div class="list-group">
                             <div class="list-group-item"
                                  ng-repeat="user in userList"
                                  ng-class="{ 'active' : user.id == selectedUser}"
                                  ng-click=seletedUser(user.id);
-                                 ng-style="{
-                            'cursor': user.id === socketId ? 'not-allowed' :'pointer'
-                        }">
+                                 ng-style="{'cursor': user.id === socketId ? 'not-allowed' :'pointer'}">
                                 <span id='{{user.id}}'>{{ user.id === socketId ? 'You': user.userName }}</span>
                             </div>
-                        </div>
+                        </div>-->
                     </div>
                 </div> 
-            </div>
+            </div> 
         </div> 
-    </div>
+    </div> 
 
     <script src="https://cdn.socket.io/socket.io-1.0.0.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ"
