Added the chat close feature

--- a/views/index.html
+++ b/views/index.html
@@ -74,7 +74,7 @@
                                             </div>
                                         </div>
                                         <hr/>
-                                        <a href="#" class="btn btn-primary">Close chat</a>
+                                        <button class="btn btn-primary" ng-click="closeChat(chattingWith)">Close chat</button>
                                     </div>
                                 </div> 
                             </div>
