--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,8 +26,8 @@ a:hover {
 
 html,
 body {
-  height: 100%;
-  background-color: #333;
+  /*height: 100%;
+  background-color: #333;*/
 }
 body {
   color: #fff;
